import for pkcs12 files - still problems with password protected pkcs12 files